# CppND-Capstone-Snake-Game

./: .gitignore  CMakeLists.txt  README.md  install_libs.sh  snake.conf
assets/: Scores.txt
documentation/html/: annotated.html  classController-members.html  classController.html  classGame-members.html  classGame.html  classHighScores-members.html  classHighScores.html  classRenderer-members.html  classRenderer.html  classSnake-members.html  classSnake.html  classText-members.html  classText.html  classes.html  controller_8h_source.html  defs_8h_source.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_87ff1ae72a1c45c72b1ccd3ed2fc21d2.html  dir_ae0ff24459f1494d69d64963a8fe06b1.html  dir_c6994dae9f1132e2f10430c954ebf805.html  dir_d0381950fc41278198232cb047ffc1f9.html  files.html  functions.html  functions_func.html  game_8h_source.html  graph_legend.html  highscores_8h_source.html  index.html  md_LICENSE.html  md_README.html  pages.html  renderer_8h_source.html  snake_8h_source.html  text_8h_source.html
documentation/latex/: annotated.tex  classController.tex  classGame.tex  classHighScores.tex  classRenderer.tex  classSnake.tex  classText.tex  dir_87ff1ae72a1c45c72b1ccd3ed2fc21d2.tex  dir_ae0ff24459f1494d69d64963a8fe06b1.tex  dir_c6994dae9f1132e2f10430c954ebf805.tex  dir_d0381950fc41278198232cb047ffc1f9.tex  md_LICENSE.tex  md_README.tex  refman.tex
src/: controller.cpp  game.cpp  highscores.cpp  main.cpp  renderer.cpp  snake.cpp  text.cpp  widgets.c  widgets.cpp
(+24 files in other folders)
